agent-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 --file docker-compose.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: agent
  name: agent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: agent
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 --file docker-compose.yml
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: agent
    spec:
      containers:
      - name: agent
        image: grafana/agent:latest
        command:
         - grafana-agent
        args:
        - -config.file=/etc/agent-config/agent.yaml
        - -metrics.wal-directory=/tmp/agent/wal
        - -enable-features=integrations-next
        - -config.expand-env
        - -config.enable-read-api
        image: grafana/agent:latest
        imagePullPolicy: ""
        name: agent
        ports:
        - containerPort: 12345
        resources: {}
        volumeMounts:
        - mountPath: /etc/agent-config/agent.yaml
          name: agent-config
          subPath: agent.yaml
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: agent-config
        configMap:
          name: agent-config
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 --file docker-compose.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: agent
  name: agent
spec:
  ports:
  - name: "12345"
    port: 12345
    targetPort: 12345
  selector:
    io.kompose.service: agent
status:
  loadBalancer: {}
