spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic
      io.kompose.service: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      securityContext:
         fsGroup: 0
      containers:
        - name: spring-petclinic
          image: janajohny/spring-petclinic
          args:
            - "-javaagent:/otel/opentelemetry-javaagent.jar"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
      volumes:
        - name: otel-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
spec:
  selector:
    app: spring-petclinic
    io.kompose.service: spring-petclinic    
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
