petclinic-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: petclinic
spec:
  host: petclinic
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
